syntax = "proto3";

import "google/protobuf/timestamp.proto";

package commandService;

option go_package = "./;commandService";

message User {
  string ID = 1;
  string Email = 2;
  string Username = 3;
  string Password = 4;
  bool   Root = 5;
  bool   Active = 6;
  google.protobuf.Timestamp CreatedAt = 7;
  google.protobuf.Timestamp UpdatedAt = 8;
}

message Blacklist {
  string ID = 1;
  string AuthToken = 2;
  google.protobuf.Timestamp CreatedAt = 3;
  google.protobuf.Timestamp UpdatedAt = 4;
}


message BlacklistTokenReq {
  string AuthToken = 1;
}

message BlacklistTokenRes {
  Blacklist Blacklist = 1;
}


message CheckBlacklistReq {
  string AuthToken = 1;
}

message CheckBlacklistRes {
  int64 Status = 1;
}


message AuthenticateReq {
  string Email = 1;
  string Password = 2;
}

message AuthenticateRes {
  User User = 1;
  string AccessToken = 2;
  int64 Status = 3;
}


message RegisterReq {
  string ID = 1;
  string Email = 2;
  string Username = 3;
  string Password = 4;
  bool   Active = 5;
}

message RegisterRes {
  User User = 1;
  string AccessToken = 2;
  int64 Status = 3;
}


message DeauthenticateReq {
  string AccessToken = 1;
}

message DeauthenticateRes {
  int64 Status = 1;
}


message ReauthenticateReq {
  string AccessToken = 1;
}

message ReauthenticateRes {
  string AccessToken = 1;
  int64 Status = 2;
}


message PasswordUpdateReq {
  string ID = 1;
  string CurrentPassword = 2;
  string NewPassword = 3;
}

message PasswordUpdatedRes {
  int64 Status = 1;
}